# osoyoo_diff_drive

./: .gitignore  CMakeLists.txt  README.md  package.xml
firmware/: osoyoo_abc.ino
firmware/examples/: README.md  build_all.sh  build_and_upload_ino.sh  move_motor.ino  read_econder.ino
firmware/examples/cmd_vel/: cmd_vel.ino
firmware/examples/double_interrupt/: double_interrupt.ino
firmware/examples/dual_motor_speed_control/: dual_motor_speed_control.ino
firmware/examples/encoder_direction/: encoder_direction.ino
firmware/examples/find_pulses_per_revolution/: find_pulses_per_revolution.ino
firmware/examples/hello_world_ros/: hello_world_ros.ino
firmware/examples/left_encoder_test/: README.md  left_encoder_test.ino
firmware/examples/motor_speed_control/: motor_speed_control.ino
firmware/examples/move_motor/: move_motor.ino
firmware/examples/move_motor_raw/: move_motor_raw.ino
firmware/examples/move_motor_with_library/: move_motor_with_library.ino
firmware/examples/odom_msg_ros_freq_test/: odom_msg_ros_freq_test.ino
firmware/examples/read_econder/: read_econder.ino
firmware/examples/read_encoder/: read_encoder.ino
firmware/examples/serial_print/: serial_print.ino
firmware/libraries/: README.md
firmware/libraries/Odometry/: diff_drive_kinematics.cpp
firmware/libraries/OsoyooDiffDrive/: OsoyooDiffDrive.ino  odometry.cpp  odometry.h
firmware/libraries/diffDriveKinematics/: diff_drive_kinematics.cpp  (+1 more)
firmware/osoyoo_abc/: .osoyoo_abc.ino.swp  osoyoo_abc.ino
launch/: base_driver.launch
msg/: lightOdom.msg
scripts/: odom_repub.py
